oxirgi sectionni tugattim

--- a/index.html
+++ b/index.html
@@ -100,11 +100,81 @@
           <div class="box-section3">
             <div class="box-sectoin3-title">
               <h2>Our Services</h2>
-              <p>Executive Trade International is an University Application Centre, guiding Bangladeshi students to Australian, British, Canadian and Irish universities!</p>
+              <p>Executive Trade International is an University Application Centre, guiding Bangladeshi students <br> to Australian, British, Canadian and Irish universities!</p>
             </div>
             <div class="box-section3-cards">
 
-              
+              <ul>
+                <li>
+                  <img src="./img/Group (5).svg" alt="logo">
+                  <h3>Career Counselling</h3>
+                  <p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus. Voluptatum </p>
+                  <div class="box-section3-button">
+                    <form action="">
+                      <button type="submit">Learn More</button>
+                      <img src="./img/arrow_forward_24px.svg" alt="">
+                    </form>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/Group (6).svg" alt="logo">
+                  <h3>University Admissions</h3>
+                  <p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis quos in minus.  </p>
+                  <div class="box-section3-button">
+                    <form action="">
+                      <button type="submit">Learn More</button>
+                      <img src="./img/arrow_forward_24px.svg" alt="">
+                    </form>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/Group (7).svg" alt="logo">
+                  <h3>Visa Consultancy</h3>
+                  <p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.  dicta accusantium fugiat. </p>
+                  <div class="box-section3-button">
+                    <form action="">
+                      <button type="submit">Learn More</button>
+                      <img src="./img/arrow_forward_24px.svg" alt="">
+                    </form>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/Group (8).svg" alt="logo">
+                  <h3>Accommodation</h3>
+                  <p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. Blanditiis  dicta accusantium fugiat.</p>
+                  <div class="box-section3-button">
+                    <form action="">
+                      <button type="submit">Learn More</button>
+                      <img src="./img/arrow_forward_24px.svg" alt="">
+                    </form>
+                  </div>
+                </li>
+                <li>
+                  <img src="./img/Group (9).svg" alt="logo">
+                  <h3>Pre-Departure Briefing</h3>
+                  <p>Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut.  dolorem dicta accusantium fugiat. </p>
+                  <div class="box-section3-button">
+                    <form action="">
+                      <button type="submit">Learn More</button>
+                      <img src="./img/arrow_forward_24px.svg" alt="">
+                    </form>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="box-section4-news">
+            <h2>News</h2>
+            <p>Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse vult.</p>
+            <div class="box-section4-cards">
+              <ul>
+                <li></li>
+              </ul>
             </div>
           </div>
         </div>
